--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@kolking/react-native-rating": "^1.4.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "^52.0.25",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
